# test-agent

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_mock_test.py  run_test.py  setup_and_test.py  test_comprehensive.py  启动教程.md  项目功能介绍.txt
data/: audit.jsonl
demo/: __init__.py  mock_api.py
frontend/: app.py
frontend-react/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend-react/src/: App.tsx  index.css
frontend-react/src/api/: client.ts  sse.ts
frontend-react/src/components/charts/: CategoryBarChart.tsx  EndpointBarChart.tsx  PassFailPieChart.tsx  PassRateTrendChart.tsx
frontend-react/src/components/common/: DownloadButton.tsx  EmptyState.tsx  ErrorAlert.tsx  FileDropZone.tsx  LoadingSkeleton.tsx  StatusBadge.tsx  SummaryCards.tsx
frontend-react/src/components/layout/: AppLayout.tsx  Footer.tsx  Sidebar.tsx  TabBar.tsx
frontend-react/src/components/online/: CaseResultRow.tsx  ProgressNode.tsx  ProgressPanel.tsx  RunResultSummary.tsx  SpecUrlInput.tsx  StartTestButton.tsx
frontend-react/src/components/tables/: FailureTable.tsx  HistoryTable.tsx  ResultsTable.tsx
frontend-react/src/hooks/: useReportDownload.ts  useSSE.ts
frontend-react/src/pages/: OfflineDetailPage.tsx  OfflineReportPage.tsx  OnlineHistoryPage.tsx  OnlineLoadResultPage.tsx  OnlineRunTestPage.tsx
frontend-react/src/stores/: useAppStore.ts  useHistoryStore.ts  useReportStore.ts  useTestStore.ts
frontend-react/src/test/: components.test.tsx  stores.test.ts  utils.test.ts
frontend-react/src/types/: index.ts
frontend-react/src/utils/: constants.ts  formatters.ts
prompts/: analyze_api.yaml  generate_tests.yaml  parse_spec.yaml  validate_report.yaml  versions.yaml
src/: __init__.py  config.py  event_bus.py  main.py
src/agent/: __init__.py  graph.py  progress_ctx.py  state.py
src/agent/nodes/: __init__.py  analyze_api.py  execute_tests.py  generate_tests.py  parse_spec.py  reflect.py  validate_report.py
src/evaluation/: __init__.py  golden_dataset.py  llm_judge.py
src/llm/: __init__.py  deepseek_client.py
src/memory/: __init__.py  qdrant_store.py  sqlite_checkpoint.py  sqlite_store.py
src/observability/: __init__.py  cost_tracker.py  tracing.py
src/prompts/: __init__.py
src/security/: __init__.py  guardrails.py
src/tools/: __init__.py  circuit_breaker.py  http_client.py  rate_limiter.py  report_gen.py  schema_validator.py  spec_parser.py  test_data_gen.py  web_doc_fetcher.py
tests/: __init__.py  conftest.py  golden_dataset.json  test_tools.py
