[project]
name = "api-test-agent"
version = "0.1.0"
description = "基于 LangGraph + DeepSeek 的 REST API 自动化测试 Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "API Test Agent Team"},
]
keywords = ["api-testing", "langgraph", "deepseek", "fastapi", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # LLM
    "openai>=1.30.0",
    "litellm>=1.40.0",
    # Agent 框架
    "langgraph>=1.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # HTTP 客户端
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # OpenAPI 解析
    "openapi-spec-validator>=0.7.0",
    "prance>=23.0.0",
    "pyyaml>=6.0",
    # JSON Schema 验证
    "jsonschema>=4.20.0",
    # 向量数据库
    "qdrant-client>=1.10.0",
    # 数据库
    "aiosqlite>=0.19.0",
    # 日志
    "loguru>=0.7.0",
    # 可观测性
    "langfuse>=2.40.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    # 评测
    "deepeval>=1.0.0",
    "ragas>=0.2.0",
    # 前端
    "streamlit>=1.30.0",
    "plotly>=5.20.0",
    # 工具
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
    "--cov-fail-under=0",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "demo/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.loguru]
# loguru 配置 — 通过 .env 文件中的 LOG_LEVEL 控制
# LOG_LEVEL = "INFO"  # DEBUG | INFO | WARNING | ERROR
